mudanças teste coleta de imagens

--- a/Coleta de imagens.ipynb
+++ b/Coleta de imagens.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "872ecce7",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "80abdf6b",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "67b8caf8",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
     }
    ],
    "source": [
-    "r.run(make_output_json=True, filepath=\"C:/Users/tobi_/OneDrive/Área de Trabalho/projeto-ovni/data/\")"
+    "r.run(make_output_json=True, filepath=\"C:/Users/tobi_/OneDrive/Área de Trabalho/projeto-ovni/data/\", max_images=1)"
    ]
   },
   {
